[package]
name = "datamon"
version = "0.1.0"
authors = ["imthaghost <imthaghost@protonmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
polars = {version="0.12.0", git = "https://github.com/ritchie46/polars", features = ["ipc"]}
libc = "0.2.93"
rand = "0.8.3"
